# jbcsolder-firmware

./: .cproject  .gitattributes  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  JBCSolder Debug.launch  JBCSolder.ioc  Makefile  STM32F767VITX_FLASH.ld  STM32F767VITX_RAM.ld
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/tools/: st-stm32cubeclt_1.17.0_23554_20241124_1810_amd64.sh
Core/Inc/: dma.h  fmc.h  gpio.h  i2c.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
Core/Src/: adc.c  delay.c  delay.h  dma.c  fmc.c  freertos.c  gpio.c  hal_lvgl_encoder.c  hal_lvgl_encoder.h  hal_lvgl_touch.c  hal_lvgl_touch.h  i2c.c  icon.c  icon.h  iron.c  iron.h  lv_demo_widget.c  lv_demo_widget.h  main.c  pid.c  pid.h  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  tim.c
Core/Src/drv/: buzzer.c  buzzer.h  lcd.c  lcd.h
Core/Src/drv/ft6236u/: ft6236u.c  ft6236u.h
Core/Src/drv/ili9341v/: ili9341v.c  ili9341v.h
Core/Src/gui/: gui_hibernate.c  gui_hibernate.h  main_screen.c  main_screen.h  screen_graph.c  screen_graph.h  screen_menu.c  screen_menu.h  theme.c  theme.h
Drivers/: lv_conf.h
Drivers/lvgl_custom_fonts/: font_notes.md  lv_font_montserrat_120.c  lv_font_montserrat_80.c  lv_font_roboto_14.c  lv_font_roboto_16.c  lv_font_roboto_18.c  lv_font_roboto_20.c  lv_font_roboto_24.c  lv_font_roboto_28.c  lv_font_roboto_34.c  lv_font_roboto_40.c  lv_font_roboto_80.c  lv_font_roboto_regular_52.c  lv_font_symbols_24.c  lv_font_symbols_28.c
Simulator/: buzzer.c  buzzer.h  hal_lvgl_encoder.c  iron.c  lv_conf.h  lv_drv_conf.h  main.c  mouse_cursor_icon.c
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cmake/: IncludeList.cmake  STM32F767xx_HAL_PARA.cmake  SourceList.cmake
